<resources>
    <string name="app_name">Workout Assistant</string>

    <string name="program_categories_toolbar_title">Program categories</string>
    <string name="diary_toolbar_title">Workout diary</string>
    <string name="new_diary_entry_toolbar_title">New entry</string>

    <string name="home_tab">Home</string>
    <string name="workouts_tab">Workouts</string>
    <string name="exercises_tab">Exercises</string>
    <string name="diary_tab">Diary</string>
    <string name="settings_tab">Settings</string>

    <string name="muscle_groups_editing_action">Edit</string>
    <string name="new_diary_entry_action">New entry</string>
    <string name="delete_diary_entries_action">Delete entryFulls</string>
    <string name="save_entry_changes_action">Save</string>
    <string name="add_exercises_action">Add exercises</string>
    <string name="ok_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="remove_action">Remove</string>

    <string name="title_label">Title</string>
    <string name="date_and_time_label">Date and Time</string>
    <string name="time_duration_label">Time duration</string>
    <string name="muscle_groups_label">Muscle groups</string>
    <string name="default_label">Default</string>

    <string name="title_hint">Title</string>
    <string name="date_hint">Workout date</string>
    <string name="start_time_hint">Start time</string>
    <string name="finish_time_hint">Finish time</string>
    <string name="time_duration_hint">Invalid time input</string>

    <string name="default_workout_title">Workout</string>

    <string-array name="muscle_groups">
        <item>Chest</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Shoulders</item>
        <item>Trapezius</item>
        <item>Quadriceps</item>
        <item>Calves</item>
        <item>Abs</item>
    </string-array>

    <string-array name="intensity_levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="categories">
        <item>Custom</item>
        <item>Bodybuilding</item>
        <item>Street workout</item>
        <item>Cardio</item>
        <item>Yoga</item>
        <item>Something</item>
    </string-array>

    <string name="null_time_input_error">Time fields must not be empty!</string>
    <string name="not_correct_time_input_error">Start time must not be greater than finish time!</string>
    <string name="empty_title_error">Title field must not be empty!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
