<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.vladislav.workoutassistant.viewmodel.DiaryEntryViewModel" />
        <variable
            name="fragment"
            type="com.vladislav.workoutassistant.view.fragments.WorkoutDetailsFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                tools:context=".view.activities.WorkoutDetailsActivity">

                <TextView
                    android:id="@+id/title_label"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/title_field"
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:afterTextChanged="@{(s) -> !viewModel.defaultTitleCheck ? viewModel.setTitle(s.toString()) : null}"
                    android:ems="10"
                    android:focusable="@{viewModel.defaultTitleCheck ? false : true}"
                    android:focusableInTouchMode="@{viewModel.defaultTitleCheck ? false : true}"
                    android:inputType="text"
                    android:text="@{viewModel.defaultTitleCheck ? viewModel.defaultTitle : viewModel.title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_label" />

                <CheckBox
                    android:id="@+id/default_title_check_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.setDefaultTitleCheckbox(!viewModel.defaultTitleCheck)}"
                    android:text="@string/default_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_field" />

                <TextView
                    android:id="@+id/date_and_time_label"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/date_and_time_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/default_title_check_field" />

                <ImageButton
                    android:id="@+id/date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:onClick="@{fragment::onDateOrTimeButtonClicked}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_and_time_label"
                    app:srcCompat="@drawable/ic_date_range_black_32dp" />

                <TextView
                    android:id="@+id/date_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/date_hint"
                    android:text="@{viewModel.date}"
                    app:layout_constraintBottom_toBottomOf="@+id/date_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date_button"
                    app:layout_constraintTop_toTopOf="@+id/date_button" />

                <ImageButton
                    android:id="@+id/start_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:onClick="@{fragment::onDateOrTimeButtonClicked}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_button"
                    app:srcCompat="@drawable/ic_access_time_black_32dp" />

                <TextView
                    android:id="@+id/start_time_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/start_time_hint"
                    android:text="@{viewModel.startTime}"
                    app:layout_constraintBottom_toBottomOf="@+id/start_time_button"
                    app:layout_constraintStart_toEndOf="@+id/start_time_button"
                    app:layout_constraintTop_toTopOf="@+id/start_time_button" />

                <ImageButton
                    android:id="@+id/finish_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:onClick="@{fragment::onDateOrTimeButtonClicked}"
                    app:layout_constraintBottom_toBottomOf="@+id/start_time_button"
                    app:layout_constraintStart_toEndOf="@+id/start_time_field"
                    app:layout_constraintTop_toTopOf="@+id/start_time_button"
                    app:srcCompat="@drawable/ic_access_time_black_32dp" />

                <TextView
                    android:id="@+id/finish_time_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/finish_time_hint"
                    android:text="@{viewModel.finishTime}"
                    app:layout_constraintBottom_toBottomOf="@+id/finish_time_button"
                    app:layout_constraintStart_toEndOf="@+id/finish_time_button"
                    app:layout_constraintTop_toTopOf="@+id/finish_time_button" />

                <TextView
                    android:id="@+id/duration_label"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/time_duration_label"
                    android:visibility="@{viewModel.startTime == null || viewModel.finishTime == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_time_button" />

                <TextView
                    android:id="@+id/duration_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/time_duration_hint"
                    android:text="@{viewModel.duration}"
                    android:visibility="@{viewModel.startTime == null || viewModel.finishTime == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/duration_label" />

                <TextView
                    android:id="@+id/muscle_groups_label"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/muscle_groups_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/duration_field" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/muscle_groups_chips"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/muscle_groups_label">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/muscle_groups_editing_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{fragment::onMuscleGroupsEditingClicked}"
                        android:text="@string/action_muscle_groups_editing"
                        app:chipIcon="@drawable/ic_edit_black_32dp" />
                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>